--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -509,7 +509,7 @@ header .navbar ul li a:hover{
 }
 .olympiads-button{
   width: 40%;
-  padding: 10px 40px;
+  padding: 10px 20px;
   border-radius: 50px;
   margin-top: 15px ;
   /* height: 10%; */
@@ -590,6 +590,85 @@ header .navbar ul li a:hover{
 }
 /* olympiads media queries ends*/
 /* olympiads section ends */
+/* exam scheldue */
+:root {
+  --color-primary: hsl(203, 100%, 38%);
+  --color-text: hsl(203, 30%, 15%);
+  --color-background: hsl(203, 100%, 98%);
+  --color-border: hsl(203, 33%, 83%);
+  --color-white: #fff;
+}
+
+.table {
+  background-color: var(--color-white);
+  width: 100%;
+  
+  border-radius: 4px;
+  border-collapse: collapse;
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 2rem;
+  box-shadow: 0 2px 10px rgba(0, 67, 115, 0.2);
+}
+
+.table__header {
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 1.9rem;
+}
+
+.table__link {
+  text-decoration: none;
+  color: var(--color-primary);
+}
+
+.table__row {
+  border-bottom: 1px solid var(--color-border);
+}
+
+.table__row--last {
+  border-bottom: 0;
+}
+
+.table__cell {
+  padding: 1rem 1.5rem;
+}
+
+.u-text-left {
+  text-align: left;
+}
+
+.u-text-right {
+  text-align: right;
+}
+
+.u-text-center {
+  text-align: center;
+}
+
+.u-font-mono {
+  font-family: "PT Mono", monospace;
+}
+
+.btn {
+  background-color: transparent;
+  box-shadow: 0 0 0 1px var(--color-primary) inset;
+  text-align: center;
+  color: var(--color-primary);
+  display: inline-block;
+  margin: 0;
+  padding: 8px 16px;
+  font-size: 5rem;
+  position: relative;
+  border: none;
+  cursor: pointer;
+  border-radius: 4px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  line-height: 20px;
+  -webkit-font-smoothing: antialiased;
+}
 
 
 /* achievements section starts */
